# moonticket-jackpot

./: .gitignore  Anchor.toml  Cargo.toml  README.md  admin.json  find-treasury-wallet.exp  find-treasury-wallet.sh  founder.json  new_jackpot_state.json  package-lock.json  package.json  treasury.json  updateMetadataManual.js  user1.json  user2.json
programs/moonticket-jackpot/: Cargo.toml
programs/moonticket-jackpot/src/: lib.rs  lib.rs.save
scripts/: airdropTix.js  buyTix.js  checkMetadata.js  checkTokenMetadata.js  checkTokenMetadataPda.js  convert.js  createMetadataRaw.js  createMetadataRawManual.js  createTIXAccount.js  createTixToken.js  createTixToken2022.js  draw.js  forceSetTokenMetadata.js  getMetadataPda.js  initJackpot.js  initialize.js  mintTokenWithMetadata.js  mint_nft_batch.js  readTokenMetadata.js  setToken2022Metadata.js  setTokenMetadata.js  updateTokenMetadata.js  uploadMetadata.js
test-ledger/: genesis.tar.bz2  snapshot-100-EH4kadLCTAjH1mZU3u9nsJG43NKGTKHGHdBtM4jiGVvg.tar.zst  snapshot-200-4M665zP8YsydpzUVhbwhbLBfNadupffXuq6xAYZkhnwW.tar.zst  tower-1_9-5X4oqhkd3NxApjF8rXP4YvrxpM5Wb9dLLntAGXJ46CTq.bin.new
test-ledger/accounts/run/: 0.3  100.0  18.2
test-ledger/accounts/snapshot/200/: 200.4
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1742932569649512  MANIFEST-000021
test-ledger/snapshot/200/: 200  status_cache
tests/: get-jakcpot-pda.js  moonticket-jackpot.test.js
